--- a/RigelSharp/RigelAppLoader/packages.config
+++ b/RigelSharp/RigelAppLoader/packages.config
@@ -3,7 +3,10 @@
   <package id="SharpDX" version="4.1.0-ci184" targetFramework="net461" />
   <package id="SharpDX.D3DCompiler" version="4.1.0-ci184" targetFramework="net461" />
   <package id="SharpDX.Desktop" version="4.1.0-ci184" targetFramework="net461" />
+  <package id="SharpDX.Diagnostics" version="2.0.4" targetFramework="net461" />
   <package id="SharpDX.Direct3D11" version="4.1.0-ci184" targetFramework="net461" />
   <package id="SharpDX.DXGI" version="4.1.0-ci184" targetFramework="net461" />
   <package id="SharpDX.Mathematics" version="4.1.0-ci184" targetFramework="net461" />
+  <package id="SharpFont" version="4.0.1" targetFramework="net461" />
+  <package id="SharpFont.Dependencies" version="2.6" targetFramework="net461" />
 </packages>
