move draw to gui

--- a/RigelSharp/RigelAppLoader/RigelAppLoader.csproj
+++ b/RigelSharp/RigelAppLoader/RigelAppLoader.csproj
@@ -91,6 +91,11 @@
       <Name>RigelEditor</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="MiniCube.fx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
