--- a/RigelSharp/RigelAppLoader/RigelAppLoader.csproj
+++ b/RigelSharp/RigelAppLoader/RigelAppLoader.csproj
@@ -92,7 +92,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="MiniCube.fx">
+    <Content Include="Shader\MiniCube.fx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
