--- a/RigelSharp/RigelAppLoader/RigelAppLoader.csproj
+++ b/RigelSharp/RigelAppLoader/RigelAppLoader.csproj
@@ -92,7 +92,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Shader\MiniCube.fx">
+    <Content Include="Shader\gui_rect.fx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shader\gui_font.fx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
