--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -75,13 +75,16 @@
     <Compile Include="EGUI\RigelEGUIBasic.cs" />
     <Compile Include="EGUI\RigelEGUICtx.cs" />
     <Compile Include="EGUI\RigelEGUICtx.Internal.cs" />
+    <Compile Include="EGUI\RigelEGUIDocker.cs" />
     <Compile Include="EGUI\RigelEGUIGraphicsBind.cs" />
     <Compile Include="EGUI\RigelEGUIMenu.cs" />
+    <Compile Include="EGUI\RigelEGUIWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RigelDrawCall.cs" />
     <Compile Include="RigelEditorAboutPage.cs" />
     <Compile Include="RigelEditorApp.cs" />
     <Compile Include="RigelEditorConsoleWindow.cs" />
+    <Compile Include="EGUI\RigelEGUICtx.Event.cs" />
     <Compile Include="RigelFont.cs" />
     <Compile Include="RigelGraphics.cs" />
     <Compile Include="RigelImageData.cs" />
