--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -83,6 +83,8 @@
     <Compile Include="EGUI\RigelEGUIStyle.cs" />
     <Compile Include="EGUI\RigelEGUIWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RigelColor.cs" />
+    <Compile Include="RigelConfig.cs" />
     <Compile Include="RigelDrawCall.cs" />
     <Compile Include="RigelEditorAboutPage.cs" />
     <Compile Include="RigelEditorApp.cs" />
