--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -71,14 +71,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EGUI\RigelEGUICtx.Main.cs" />
     <Compile Include="EGUI\RigelEGUI.cs" />
     <Compile Include="EGUI\RigelEGUIBasic.cs" />
     <Compile Include="EGUI\RigelEGUIBuffer.cs" />
     <Compile Include="EGUI\RigelEGUIBufferGUIWindow.cs" />
     <Compile Include="EGUI\RigelEGUICtx.cs" />
-    <Compile Include="EGUI\RigelEGUICtx.Internal.cs" />
+    <Compile Include="EGUI\RigelEGUICtx.Window.cs" />
     <Compile Include="EGUI\RigelEGUIDocker.cs" />
     <Compile Include="EGUI\RigelEGUIGraphicsBind.cs" />
+    <Compile Include="EGUI\RigelEGUILayout.cs" />
     <Compile Include="EGUI\RigelEGUIMenu.cs" />
     <Compile Include="EGUI\RigelEGUIStyle.cs" />
     <Compile Include="EGUI\RigelEGUIWindow.cs" />
