--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -73,12 +73,14 @@
   <ItemGroup>
     <Compile Include="EGUI\GUI.cs" />
     <Compile Include="EGUI\GUIComponent.cs" />
+    <Compile Include="EGUI\GUIDock.cs" />
     <Compile Include="EGUI\GUIDrawStage.cs" />
     <Compile Include="EGUI\GUIDrawStageMain.cs" />
     <Compile Include="EGUI\GUIDrawStageOverlay.cs" />
     <Compile Include="EGUI\GUIDrawStageWindows.cs" />
     <Compile Include="EGUI\GUIInternal.cs" />
     <Compile Include="EGUI\GUITest.cs" />
+    <Compile Include="EGUI\GUIWindow.cs" />
     <Compile Include="EGUI\RigelEGUICtx.Main.cs" />
     <Compile Include="EGUI\RigelEGUI.cs" />
     <Compile Include="EGUI\RigelEGUIBasic.cs" />
