--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -93,7 +93,7 @@
     <Compile Include="EGUI\RigelEGUIGraphicsBind.cs" />
     <Compile Include="EGUI\RigelEGUILayout.cs" />
     <Compile Include="EGUI\RigelEGUIMenu.cs" />
-    <Compile Include="EGUI\RigelEGUIStyle.cs" />
+    <Compile Include="EGUI\GUIStyle.cs" />
     <Compile Include="EGUI\RigelEGUIWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RigelColor.cs" />
