egui: remove legacy code

--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -83,17 +83,11 @@
     <Compile Include="EGUI\GUITest.cs" />
     <Compile Include="EGUI\GUIUtility.cs" />
     <Compile Include="EGUI\GUIWindow.cs" />
-    <Compile Include="EGUI\RigelEGUICtx.Main.cs" />
-    <Compile Include="EGUI\RigelEGUI.cs" />
-    <Compile Include="EGUI\RigelEGUIBasic.cs" />
     <Compile Include="EGUI\RigelEGUIBuffer.cs" />
     <Compile Include="EGUI\RigelEGUIBufferGUIWindow.cs" />
     <Compile Include="EGUI\RigelEGUICtx.cs" />
     <Compile Include="EGUI\RigelEGUICtx.Window.cs" />
-    <Compile Include="EGUI\RigelEGUIDocker.cs" />
     <Compile Include="EGUI\RigelEGUIGraphicsBind.cs" />
-    <Compile Include="EGUI\RigelEGUILayout.cs" />
-    <Compile Include="EGUI\RigelEGUIMenu.cs" />
     <Compile Include="EGUI\GUIStyle.cs" />
     <Compile Include="EGUI\RigelEGUIWindow.cs" />
     <Compile Include="EventSlot.cs" />
@@ -101,10 +95,8 @@
     <Compile Include="RigelColor.cs" />
     <Compile Include="RigelConfig.cs" />
     <Compile Include="RigelDrawCall.cs" />
-    <Compile Include="RigelEditorAboutPage.cs" />
     <Compile Include="RigelEditorApp.cs" />
-    <Compile Include="RigelEditorConsoleWindow.cs" />
-    <Compile Include="EGUI\RigelEGUICtx.Event.cs" />
+    <Compile Include="EGUI\GUIEvent.cs" />
     <Compile Include="RigelFont.cs" />
     <Compile Include="RigelGraphics.cs" />
     <Compile Include="RigelImageData.cs" />
