EGUI: add GUI object pool with hash for immediate mode persistance.

--- a/RigelSharp/RigelCore/RigelCore.csproj
+++ b/RigelSharp/RigelCore/RigelCore.csproj
@@ -69,8 +69,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alg\HashFunction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RgWindow.cs" />
+    <Compile Include="RigelAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
