--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="EGUI\GUI.cs" />
     <Compile Include="EGUI\GUIComponent.cs" />
+    <Compile Include="EGUI\GUICtx.cs" />
     <Compile Include="EGUI\GUIDock.cs" />
     <Compile Include="EGUI\GUIDrag.cs" />
     <Compile Include="EGUI\GUIDrawStage.cs" />
@@ -107,6 +108,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RigelCore\RigelCore.csproj">
+      <Project>{f29a7e2d-8106-44a3-a404-64870126be84}</Project>
+      <Name>RigelCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
