--- a/RigelSharp/RigelCore/RigelCore.csproj
+++ b/RigelSharp/RigelCore/RigelCore.csproj
@@ -71,8 +71,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Alg\HashFunction.cs" />
+    <Compile Include="Engine\IGameEntry.cs" />
     <Compile Include="EventSlot.cs" />
     <Compile Include="Helper\ReflectionHelper.cs" />
+    <Compile Include="Helper\Singleton.cs" />
     <Compile Include="ImageData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RgWindow.cs" />
