--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -96,6 +96,8 @@
     <Compile Include="EGUI\GUIStyle.cs" />
     <Compile Include="EGUI\RigelEGUIWindow.cs" />
     <Compile Include="Helper\EditorReflectionHelper.cs" />
+    <Compile Include="Player\PlayerEditorWindow.cs" />
+    <Compile Include="Player\PlayerManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EditorConfig.cs" />
     <Compile Include="RigelDrawCall.cs" />
