--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -82,6 +82,7 @@
     <Compile Include="EGUI\GUIDrawStageWindows.cs" />
     <Compile Include="EGUI\GUIInternal.cs" />
     <Compile Include="EGUI\GUILayout.cs" />
+    <Compile Include="EGUI\GUIMenu.cs" />
     <Compile Include="EGUI\GUIMessageBox.cs" />
     <Compile Include="EGUI\GUIOption.cs" />
     <Compile Include="EGUI\GUIScrollView.cs" />
