--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Helper\EditorReflectionHelper.cs" />
     <Compile Include="Player\PlayerEditorWindow.cs" />
     <Compile Include="Player\PlayerManager.cs" />
+    <Compile Include="EditorAboutWindow.cs" />
+    <Compile Include="Project\ProjectManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EditorConfig.cs" />
     <Compile Include="RigelDrawCall.cs" />
