EGUI: Add TextBlock method; Support multi-line text.

--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EditorMenuManager.cs" />
+    <Compile Include="EditorTest.cs" />
     <Compile Include="EGUI\GUI.cs" />
     <Compile Include="EGUI\GUIComponent.cs" />
     <Compile Include="EGUI\GUICtx.cs" />
