migrate GUI graphics bind to GraphicsContext

--- a/RigelSharp/RigelCore/RigelCore.csproj
+++ b/RigelSharp/RigelCore/RigelCore.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Rendering\CommandBuffer.cs" />
     <Compile Include="Rendering\GraphicsContext.cs" />
     <Compile Include="Rendering\GraphicsManager.cs" />
+    <Compile Include="Rendering\RenderTextureIdentifier.cs" />
     <Compile Include="RgWindow.cs" />
     <Compile Include="RigelAPI.cs" />
     <Compile Include="FontInfo.cs" />
