add dynamic texture buffer

--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -96,6 +96,7 @@
     <Compile Include="EGUI\GUIObjScrollView.cs" />
     <Compile Include="EGUI\GUITest.cs" />
     <Compile Include="EGUI\GUITextProcessor.cs" />
+    <Compile Include="EGUI\GUITextureStorage.cs" />
     <Compile Include="EGUI\GUIUtility.cs" />
     <Compile Include="EGUI\GUIWindow.cs" />
     <Compile Include="EGUI\RigelEGUIBuffer.cs" />
