--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -77,6 +77,7 @@
     <Compile Include="EditorModule.cs" />
     <Compile Include="EditorTest.cs" />
     <Compile Include="EGUI\GUI.cs" />
+    <Compile Include="EGUI\GUI.Impl.cs" />
     <Compile Include="EGUI\GUIComponent.cs" />
     <Compile Include="EGUI\GUIContent.cs" />
     <Compile Include="EGUI\GUICtx.cs" />
