--- a/RigelSharp/RigelCore/RigelCore.csproj
+++ b/RigelSharp/RigelCore/RigelCore.csproj
@@ -92,7 +92,9 @@
     <Compile Include="Helper\ReflectionHelper.cs" />
     <Compile Include="Helper\Singleton.cs" />
     <Compile Include="ImageData.cs" />
+    <Compile Include="Math.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Random.cs" />
     <Compile Include="Rendering\CommandBuffer.cs" />
     <Compile Include="Rendering\Graphics.cs" />
     <Compile Include="Rendering\GraphicsBuffer.cs" />
@@ -104,6 +106,7 @@
     <Compile Include="FontInfo.cs" />
     <Compile Include="RigelColor.cs" />
     <Compile Include="Helper\Utility.cs" />
+    <Compile Include="Vector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
