--- a/RigelSharp/RigelEditor/RigelEditor.csproj
+++ b/RigelSharp/RigelEditor/RigelEditor.csproj
@@ -102,6 +102,7 @@
     <Compile Include="EGUI\GUITextureStorage.cs" />
     <Compile Include="EGUI\GUIUtility.cs" />
     <Compile Include="EGUI\GUIWindow.cs" />
+    <Compile Include="EGUI\IGUIEventHandler.cs" />
     <Compile Include="EGUI\RigelEGUIBuffer.cs" />
     <Compile Include="EGUI\RigelEGUIBufferGUIWindow.cs" />
     <Compile Include="EditorGUICtx.cs" />
@@ -110,6 +111,8 @@
     <Compile Include="EGUI\GUIStyle.cs" />
     <Compile Include="EGUI\RigelEGUIWindow.cs" />
     <Compile Include="Helper\EditorReflectionHelper.cs" />
+    <Compile Include="Platforms\GUIEventHandlerSharpDX.cs" />
+    <Compile Include="Platforms\GUIEventHandlerWindows.cs" />
     <Compile Include="Player\PlayerEditorWindow.cs" />
     <Compile Include="Player\PlayerManager.cs" />
     <Compile Include="EditorAboutWindow.cs" />
