--- a/RigelSharp/RigelEngine/RigelEngine.csproj
+++ b/RigelSharp/RigelEngine/RigelEngine.csproj
@@ -29,6 +29,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,12 +45,24 @@
   <ItemGroup>
     <Compile Include="RigelEngineEditorApplication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RigelEngineEntry.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rigel.Editor\Rigel.Editor.csproj">
       <Project>{38178aa4-1f2f-40fe-9bfe-5af358d8dad3}</Project>
       <Name>Rigel.Editor</Name>
     </ProjectReference>
+    <ProjectReference Include="..\RigelCore\RigelCore.csproj">
+      <Project>{f29a7e2d-8106-44a3-a404-64870126be84}</Project>
+      <Name>RigelCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>XCOPY $(TargetDir)*.dll $(SolutionDir)RigelEngineLoader\$(OutDir)Data\Assembly\*.dll /S /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
