--- a/RigelSharp/RigelCore/RigelCore.csproj
+++ b/RigelSharp/RigelCore/RigelCore.csproj
@@ -73,6 +73,9 @@
   <ItemGroup>
     <Compile Include="Alg\HashFunction.cs" />
     <Compile Include="AssemblyLoader.cs" />
+    <Compile Include="Context\PlatformEnum.cs" />
+    <Compile Include="Context\RigelGfxContextAttribute.cs" />
+    <Compile Include="Context\RigelWindowContextAttribute.cs" />
     <Compile Include="Engine\BaseComponent.cs" />
     <Compile Include="Engine\Camera.cs" />
     <Compile Include="Engine\GameEngine.cs" />
