--- a/RigelSharp/RigelAppLoader/RigelAppLoader.csproj
+++ b/RigelSharp/RigelAppLoader/RigelAppLoader.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RigelEngineApplication.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -85,14 +86,6 @@
     <ProjectReference Include="..\RigelCore\RigelCore.csproj">
       <Project>{f29a7e2d-8106-44a3-a404-64870126be84}</Project>
       <Name>RigelCore</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RigelEditor\RigelEditor.csproj">
-      <Project>{27b8fc1a-3cee-4793-9053-35069e645472}</Project>
-      <Name>RigelEditor</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SampleGame\SampleGame.csproj">
-      <Project>{98e1d864-cbea-4eee-8a33-e93dac9f7155}</Project>
-      <Name>SampleGame</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
