--- a/RigelSharp/RigelEngine/RigelEngine.csproj
+++ b/RigelSharp/RigelEngine/RigelEngine.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{22813787-485F-4569-9CB6-1A2B52F646F6}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RigelEngine</RootNamespace>
     <AssemblyName>RigelEngine</AssemblyName>
@@ -32,6 +32,9 @@
   <PropertyGroup>
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,15 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RigelEngineEditorApplication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RigelEngineEntry.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Rigel.Editor\Rigel.Editor.csproj">
-      <Project>{38178aa4-1f2f-40fe-9bfe-5af358d8dad3}</Project>
-      <Name>Rigel.Editor</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RigelCore\RigelCore.csproj">
       <Project>{f29a7e2d-8106-44a3-a404-64870126be84}</Project>
       <Name>RigelCore</Name>
@@ -63,6 +61,7 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>XCOPY $(TargetDir)*.dll $(SolutionDir)RigelEngineLoader\$(OutDir)Data\Assembly\*.dll /S /Y</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
