--- a/RigelSharp/Rigel.OpenTK/Rigel.OpenTK.csproj
+++ b/RigelSharp/Rigel.OpenTK/Rigel.OpenTK.csproj
@@ -44,11 +44,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test.cs" />
+    <Compile Include="RigelGfxContextOpenTK.cs" />
+    <Compile Include="RigelOpenTK.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RigelCore\RigelCore.csproj">
+      <Project>{f29a7e2d-8106-44a3-a404-64870126be84}</Project>
+      <Name>RigelCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
