--- a/RigelSharp/RigelCore/RigelCore.csproj
+++ b/RigelSharp/RigelCore/RigelCore.csproj
@@ -73,6 +73,8 @@
   <ItemGroup>
     <Compile Include="Alg\HashFunction.cs" />
     <Compile Include="AssemblyLoader.cs" />
+    <Compile Include="Context\IRigelGfxContext.cs" />
+    <Compile Include="Context\IRigelWindowContext.cs" />
     <Compile Include="Context\PlatformEnum.cs" />
     <Compile Include="Context\RigelContextManager.cs" />
     <Compile Include="Context\RigelGfxContextAttribute.cs" />
@@ -98,6 +100,7 @@
     <Compile Include="Helper\Singleton.cs" />
     <Compile Include="IFontInfo.cs" />
     <Compile Include="ImageData.cs" />
+    <Compile Include="IRigelWindow.cs" />
     <Compile Include="Math.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Random.cs" />
@@ -107,7 +110,6 @@
     <Compile Include="Rendering\GraphicsContext.cs" />
     <Compile Include="Rendering\GraphicsManager.cs" />
     <Compile Include="Rendering\RenderTextureIdentifier.cs" />
-    <Compile Include="RgWindow.cs" />
     <Compile Include="RigelAPI.cs" />
     <Compile Include="FontInfo.cs" />
     <Compile Include="RigelColor.cs" />
