--- a/RigelSharp/RigelEngine/RigelEngine.csproj
+++ b/RigelSharp/RigelEngine/RigelEngine.csproj
@@ -47,9 +47,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RigelEngineApp.cs" />
     <Compile Include="RigelEngineEntry.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Rigel.OpenTK\Rigel.OpenTK.csproj">
+      <Project>{4ce5a1c3-7273-4d6c-9edd-e6f37441ff26}</Project>
+      <Name>Rigel.OpenTK</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Rigel.SharpDX\Rigel.SharpDX.csproj">
+      <Project>{922643be-d399-4590-b63b-add764b1697e}</Project>
+      <Name>Rigel.SharpDX</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RigelCore\RigelCore.csproj">
       <Project>{f29a7e2d-8106-44a3-a404-64870126be84}</Project>
       <Name>RigelCore</Name>
