--- a/RigelSharp/Rigel.SharpDX/Rigel.SharpDX.csproj
+++ b/RigelSharp/Rigel.SharpDX/Rigel.SharpDX.csproj
@@ -53,6 +53,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -62,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GraphicsContextSharpDX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RigelGfxContextSharpDX.cs" />
     <Compile Include="RigelSharpDX.cs" />
