--- a/RigelSharp/RigelCore/RigelCore.csproj
+++ b/RigelSharp/RigelCore/RigelCore.csproj
@@ -100,7 +100,6 @@
     <Compile Include="Helper\Singleton.cs" />
     <Compile Include="IFontInfo.cs" />
     <Compile Include="ImageData.cs" />
-    <Compile Include="IRigelWindow.cs" />
     <Compile Include="Math.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Random.cs" />
@@ -108,7 +107,9 @@
     <Compile Include="Rendering\Graphics.cs" />
     <Compile Include="Rendering\GraphicsBuffer.cs" />
     <Compile Include="Rendering\GraphicsContext.cs" />
+    <Compile Include="Rendering\GraphicsContextBase.cs" />
     <Compile Include="Rendering\GraphicsManager.cs" />
+    <Compile Include="Context\IRigelWindow.cs" />
     <Compile Include="Rendering\RenderTextureIdentifier.cs" />
     <Compile Include="RigelAPI.cs" />
     <Compile Include="FontInfo.cs" />
