--- a/RigelSharp/RigelEngine/RigelEngine.csproj
+++ b/RigelSharp/RigelEngine/RigelEngine.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Module\ModuleEditorGraphics.cs" />
+    <Compile Include="Module\ModuleEngineGUI.cs" />
+    <Compile Include="RigelModuleManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RigelEngineApp.cs" />
     <Compile Include="RigelEngineEntry.cs" />
